log
Thu, May 12, 2022 11:32:51 PM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:80:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       aux = copy(n)->sudo[f][c] = i;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
7cab593
Thu, May 12, 2022 11:33:20 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
1f1b782
Thu, May 12, 2022 11:34:10 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b2d678d
Thu, May 12, 2022 11:34:33 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d32e1da
Thu, May 12, 2022 11:34:43 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3ddbd8e
Thu, May 12, 2022 11:35:19 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
74f4063
Thu, May 12, 2022 11:36:00 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
130a701
Thu, May 12, 2022 11:44:48 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
53ead9a
Thu, May 12, 2022 11:45:33 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
8f14aff
Thu, May 12, 2022 11:46:12 PM: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
fc14fb7
Fri, May 13, 2022 12:02:04 AM: 
 sudoku.c | 39 +++++++++++++++++----------------------
 1 file changed, 17 insertions(+), 22 deletions(-)
 tests:  2|4
total_score: 15/70
0edd483
Fri, May 13, 2022 12:02:20 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
9806ee1
Fri, May 13, 2022 12:02:35 AM: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  2|4
total_score: 15/70
ac24722
Fri, May 13, 2022 12:15:16 AM: 
 sudoku.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
ee79226
Fri, May 13, 2022 12:16:45 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
3ca4af7
